[package]
name = "option_create"
version = "0.1.0"
description = "Solana Options Standard Programs created by Epicentral Labs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "option_create"

[features]
default = []
custom-heap = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
